# NeuroFold

./: README.md
client/: next.config.js  package-lock.json  package.json
client/app/: layout.tsx  page.tsx
client/models/: common-models.ts  discovery-models.ts  predict-models.ts
server/: bindingdb_sample.csv  discovery.py  drug_db.csv  drug_target_model.pth  main.py  model.py  new_drug_target_model.pth  new_model.py  pyproject.toml  requirements.txt  test.py  utils.py
