[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-genai>=1.2.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
    "rdkit>=2024.9.6",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "uvicorn>=0.34.0",
]
